Bugs en Mostrador, elimine el framework de ext3 que al parecer nadie utiliza. Y modifique el Logger para que no ponga el nombre del archivo de donde se origino el log. Ajuste los estilos del mostrador para que no muestre overflows y agregue la funcion __pos__calcularTotal() en el archivo de configuracion para modificar el calculo de los totales como puede ser, (subtotal+iva)-descuento o (subtotal-descuento)+iva etc.

--- a/css/final/ApplicationVentas.css
+++ b/css/final/ApplicationVentas.css
@@ -27,6 +27,7 @@
 }
 
 .ApplicationVender-item{
+	overflow: hidden;
 	margin: 5px;
 	
 	-moz-border-radius: 5px;
